# ChangeLog for dev-ruby/selenium-webdriver
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/selenium-webdriver/ChangeLog,v 1.64 2014/11/13 06:56:41 graaff Exp $

  13 Nov 2014; Hans de Graaff <graaff@gentoo.org>
  -selenium-webdriver-2.40.0.ebuild, -selenium-webdriver-2.41.0.ebuild,
  -selenium-webdriver-2.42.0.ebuild:
  Cleanup.

*selenium-webdriver-2.43.0 (10 Sep 2014)

  10 Sep 2014; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.43.0.ebuild:
  Version bump.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> selenium-webdriver-2.40.0.ebuild,
  selenium-webdriver-2.41.0.ebuild, selenium-webdriver-2.42.0.ebuild:
  Remove trailing '.' from DESCRIPTION.

*selenium-webdriver-2.42.0 (24 May 2014)

  24 May 2014; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.42.0.ebuild:
  Version bump.

  18 May 2014; Hans de Graaff <graaff@gentoo.org>
  selenium-webdriver-2.41.0.ebuild:
  Add ruby21.

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org>
  -selenium-webdriver-2.37.0.ebuild, -selenium-webdriver-2.38.0.ebuild,
  -selenium-webdriver-2.39.0.ebuild:
  Cleanup old.

*selenium-webdriver-2.41.0 (31 Mar 2014)

  31 Mar 2014; Manuel Rüger <mrueg@gentoo.org>
  +selenium-webdriver-2.41.0.ebuild:
  Version bump.

  20 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  selenium-webdriver-2.40.0.ebuild:
  Fix childprocess dependency.

*selenium-webdriver-2.40.0 (20 Feb 2014)

  20 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.40.0.ebuild:
  Version bump.

*selenium-webdriver-2.39.0 (14 Jan 2014)

  14 Jan 2014; Hans de Graaff <graaff@gentoo.org>
  +selenium-webdriver-2.39.0.ebuild:
  Version bump.

  14 Jan 2014; Hans de Graaff <graaff@gentoo.org>
  -selenium-webdriver-2.34.0.ebuild, -selenium-webdriver-2.35.0.ebuild,
  -selenium-webdriver-2.35.1.ebuild:
  Cleanup.

*selenium-webdriver-2.38.0 (06 Dec 2013)

  06 Dec 2013; Hans de Graaff <graaff@gentoo.org>