@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST selenium-webdriver-2.43.0.gem 2833920 SHA256 09fe4374d1541cb45403ad1238c2d88129f3afb985218635af087a06c99a521a SHA512 b43c7763e873a8e6f6173b18b35b629652952678e71249f84df03d659c2ee4d368f254ab772250bca6e21984e0b592b9b7f038d5ce6b4c0e658f6e3ccfedfcab WHIRLPOOL f316a9799b4ad9d08e3a9909e7762c86a64627453b80bbe5a6f16e1e6d41ba8ad762703d3e853baddffc592111525e01345cb53e00120015b0557725677e2c82
+DIST selenium-webdriver-2.44.0.gem 2834944 SHA256 9c105d14697e339f14d3427bc177e3b2a8fe18710e1879c4666beac60a037519 SHA512 7221df65f83d1635135742716f13ba2f1294ac9981bc73662842da49a8756ecd78446d302241df5f8cda8762f24ff9ce9dab6f1d85f40fad3dd04912197a6e06 WHIRLPOOL b095a6c96c2341786a7a3dec6f08df8d1b1b8d197092b2f84e3edf15f042da7671cf99dee0ae0f53078147b9540a1d08c0b51df93968ca5afe66c8c954780f03
 EBUILD selenium-webdriver-2.43.0.ebuild 1300 SHA256 84c8a2fd963780c8a3185001bddd4e74feabf0dd0c8ef1a7d79d1e90de1ec84e SHA512 193d061470a6f6c512a1c960c2616529682bcba7809638e63cc1d9eddbf12406ad0f463c1b4475ce1d9ba9ecdd711d04be30a57238661f49e16a9290f59ec90f WHIRLPOOL 10f1950229fcba014fc9f7a58243ab49740168b8d0ca029c4fdf0918e67dbce9011f8d74e42771a828887ca417cb4d8941557d6faa8c3b1cb008997154e2bdf8
-MISC ChangeLog 10072 SHA256 8d5b4dab2f97192683dd30f304c19f82edc0da9aa4daf343fc61989cb4bf7731 SHA512 5b4c85371ed142dbaf8255535feaa10673d0119479f8954a2591cedff8aba99f38bec6dbf8d61c51c8be47ae32fb6291d96b706d4d2b8eb29e2814dcccea4082 WHIRLPOOL b53ebe45c7c12946235db6eef37e33896c3cd3fc4e86afa03b7d13b77db60504ada8b9d7718f86f271fc960a73eb0de0d2f7b09d04705067c41972f9f488abb2
+EBUILD selenium-webdriver-2.44.0.ebuild 1300 SHA256 6b4545b97d23549ee5dae3123ed7b1e86ed3229672c21d2e8c5e76257e2cf0c6 SHA512 2b1f3bf3a2606fbff53e7de56906c7a55d2fe1f85ee67da8bba54e7a0eb8f1d2153d8e49e7034786d2f680c18ee3f140304563b7627b9d38576fd718dd55cb0f WHIRLPOOL 1c89702c6994178aacc96afba544733b5f6fd0ab0627b7d1c213447af6b1f0c91ec346f588146c01dd6388557705934d04f3e11c4993127eacbd0794676cc2f1
+MISC ChangeLog 10218 SHA256 372c4cb046f9fa418d7498d995b13ca59004f7fe943ca5055a62d0ef76254dae SHA512 c654ceffc5f8a04fa9dafacad573c2913f1e6a0e28d2da6a212b131321f9df1d1b780d97140cca4335eedee285f0ebbf323d929b059ba84486241715cbce243a WHIRLPOOL d6f90f1c650096f3602eec15f5c5776cd9f6151a2ceda900f2acba8d30b32be27194374461bb848f16003b74cd5eb2a1e7feb1ff32bcafa4ce8dc20aea5c932c
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlRkVi8ACgkQiIP6VqMIqNeInAD+I9GdRQ5d1gU91mXpXGJnyUF/
-/8+ArPt/ecP5Uvr2JkAA/RU6ixhUVtgjR3Ib8umXgrYN1C+UZ+7VfnE41Txz5037
-=IUDA
+iF0EAREIAAYFAlRkVpMACgkQiIP6VqMIqNfiUQD4pmO5QbXun3dNXfrh5wNs6u8R
+qDVVUDuNGFS8NrXhFAD/ZU03Pq7PRbkTRILSvqRX+8Vo7mpNA62K5LYcCrSUUtw=
+=U8F1
 -----END PGP SIGNATURE-----
